admin/src/scss/layout/_forms.scss
@use '../abstracts' as *;
@use './spacing' as *;
@use './typography' as *;
@use '../theme/input' as *;
@use '../theme/buttons' as *;
@use '../theme/colors' as *;
@use '../theme/borders' as theme;

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
	color: $body-color;
	-webkit-text-fill-color: $body-color;
	transition: background-color 5000s ease-in-out 0s;
}

.form-group + .form-group {
	margin-top: $text-spacer-sm;
}

.form-control {
	font-weight: $fw-medium;

	&-xs {
		border-radius: 4px;
		width: 40%;
		font-size: $caption;
		font-weight: $fw-normal;
		text-align: center;
		padding: rem(2) rem(8);
		margin-top: 0px;
	}

	&--borderless {
		border: none;
	}

	&:disabled {
		opacity: .5;
	}
}

.form-card {
	border-radius: theme.$border-radius;
	padding: rem(12) rem(16);

	&-lg {
		.form-control {
			font-size: $h4-font-size;
		}
	}

	&,
	& .form-group {
		display: flex;
		flex-direction: column;
		align-items: center;

		.form-label {
			text-transform: initial;
			font-weight: $fw-normal;
			margin: 0px;
		}

		.form-control {
			font-weight: $fw-bold;
			padding: 0px;
			order: -1;
			text-align: center;
		}

		.form-control {
			font-family: $font-heading;
			margin: 0px;
			background-color: transparent;
			@extend .form-control--borderless !optional;
		}
	}
}

.error-border {
	border-color: $danger;
}

.error {
	color: $danger;
}

.form-text.error {
	font-weight: $fw-normal;
}

.form-label {
	font-weight: $fw-medium;
	font-size: $small;
}

legend {
	font-weight: $fw-medium;
	font-size: $body-2;
}

.form-label,
.form-label--flex,
legend {
	margin-bottom: rem(12);
}

.form-check {
	min-height: 0px;

	&-label {
		font-size: rem(14);
	}

	&-input:focus {
		box-shadow: none;
	}
}

.form-select {
	padding: $input-padding-y $input-padding-x;
}

#custom-switch {
	height: 26px;
}

.date-picker-card {
	display: flex;
	border-radius: theme.$border-radius;
	border: theme.$border-color solid $border-width;
	display: flex;
	width: 100%;
	cursor: pointer;
	position: relative;

	&::before {
		margin-left: rem(12);
		margin-top: rem(15);
	}

	&.day-picker-card {
		&::before {
			content: url($data-svg-prefix + map-get($icons, 'calendar'));
		}
	}

	&.time-picker-card {
		&::before {
			content: url($data-svg-prefix + map-get($icons, 'clock'));
		}
	}

	&:focus-within {
		border-color: $input-focus-border-color;
	}

	&.error-border {
		@extend .error-border !optional;
	}

	.form-label {
		margin: 0px;
		position: absolute;
		padding: $input-padding-y 0px $input-padding-y $input-padding-x;
		font-size: $caption;
		color: #6f767e;
	}
}

// search field
@mixin input-icon-box($radius: theme.$border-radius, $padding-y: $input-padding-y, $padding-x: $input-padding-x, $color: $clr-neutral-6) {
	display: flex;
	align-items: center;
	border-radius: $radius;
	border: $input-border-width solid $color;
	padding-right: rem(8);
	background-color: $gray-300;
	border-color: transparent;

	&:focus-within {
		border-color: $input-focus-border-color;
	}

	.form-control {
		background-color: transparent;
		border: none;
		border-radius: 0;
		min-height: auto;
	}
}

// search
.input-wrapper {
	@include input-icon-box();
}

